update: 删除api与菜单管理以及修改授权方式

--- a/rbac_model.conf
+++ b/rbac_model.conf
@@ -6,7 +6,7 @@ r = sub, obj, act
 #  act 是请求的动作（Action），即对资源进行的操作（如读、写、删除等）。
 
 [policy_definition]
-p = sub, obj, act,desc,create_by
+p = sub, obj, act,desc,create_by,api_id
 
 # p 代表策略（Policy）。
 #  sub 是策略的主体（Subject），与请求中的主体对应。
